plugins/devkit/devkit-java-tests/testData/inspections/inspectionDescription/MyRegisteredInspection.java
import com.intellij.codeInspection.InspectionProfileEntry;

public class <error descr="Inspection does not have a description">MyRegisteredInspection</error> extends InspectionProfileEntry {
}